--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,6 +3,8 @@
 #background {
     height: 725px;
     background-color: #FF8360;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -16,6 +18,14 @@ body {
 
 header {
     background-color:#FF8360;
+    opacity: .8;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -31,7 +41,7 @@ nav a:hover {
 }
 
 .home-title {
-    color: #0E0E52;
+    color: #EEDF6D;
     font-family: 'Nuito', 'Georgia', serif;
     font-size: 2em;
     margin-top: 10px;
@@ -42,7 +52,7 @@ h2 {
 }
 
 h4 {
-    color: #0E0E52;
+    color: #8BD3E5;
 }
 
 .book, .join {
@@ -57,7 +67,7 @@ h4 {
 }
 
 .book:hover, .join:hover {
-    background-color: #FF8360;
+    background-color: #8BD3E5;
     color: #0E0E52;
 }
 
@@ -65,6 +75,9 @@ h4 {
     background-color: #EEDF6D;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #0E0E52;
 }
 
 .msg h2 {
@@ -83,6 +96,9 @@ footer {
     background-color: #EEDF6D;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer h3 {
@@ -106,8 +122,44 @@ footer .social img {
     padding-top: 15px;
 }
 
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.card-img, .mountains {
+    width: 100%;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0E0E52;
+}
+
 .card-img {
     border: 10px solid #EEDF6D;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #0E0E52;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
 
 .rivers-card, .camping-card, .rapids-card {
@@ -125,6 +177,26 @@ footer .social img {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 #hero-img {
@@ -145,4 +217,46 @@ main section {
 
 main section img {
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
