--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -181,6 +181,7 @@ footer .social img {
     align-self: center;
 }
 
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -217,6 +218,93 @@ main section {
 
 main section img {
     box-sizing: border-box;
+}
+
+#title {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+.river-title {
+    color: #EEDF6D;
+    font-family: 'Nuito', 'Georgia', serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+#river-box {
+    grid-column: 1/4;
+    grid-row: 1/4;
+    z-index: -1;
+    padding-bottom: 130px;
+}
+
+#river-img {
+    width: 100%;
+}
+
+#name {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.river-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.idaho {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row: 1/2;
+    grid-column: 1/4;
+}
+
+.box {
+    grid-column: 1/3;
+    grid-row: 1/4;
+    padding-bottom: 200px;
+    width: 100%;
+    padding-left: 10px;
+}
+
+.descrip {
+    grid-column: 3/5;
+    grid-row: 1/3;
+    font-size: large;
+    width: 100%;
+    text-align: left;
+    padding-right: 10px;
+    padding-top: 60px;
+}
+
+.utah {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row: 2/3;
+    grid-column: 1/4;
+}
+
+
+.arizona {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-row: 3/4;
+    grid-column: 1/4;
+}
+
+.side-img {
+    border: 10px solid #EEDF6D;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #0E0E52;
+    margin-top: 10px;
 }
 
 @media screen and (max-width: 900px) {
