--- a/cuisineart/styles/style.css
+++ b/cuisineart/styles/style.css
@@ -41,26 +41,45 @@ nav a:hover {
   color: black;
 }
 
+.landing {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 10px;
+}
+
+#msg {
+  text-align: center;
+  padding-top: 23%;
+  left: 50%;
+}
+
+#msg h1 {
+  font-size: 3em;
+}
+
+#msg h3 {
+  font-size: 1.5em;;
+}
+
 .slidershow {
-  width: 50%;
-  height: 400px;
+  width: 100%;
   overflow: hidden;
 }
 
 .middle {
-  position: absolute;
-  top: 50%;
-  left: 74%;
-  transform: translate(-50%, -50%);
+  grid-column: 2/3;
+  grid-row: 1/3;
 }
 
 .navigation {
   position: absolute;
   bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
+  padding-left: 20%;
+  grid-row: 2/3;
   display: flex;
+  
 }
+
 .bar {
   width: 50px;
   height: 10px;
@@ -69,6 +88,7 @@ nav a:hover {
   cursor: pointer;
   transition: 0.4s;
 }
+
 .bar:hover {
   background: #fff;
 }
@@ -109,8 +129,48 @@ input[name='r'] {
   margin-left: -80%;
 }
 
-.button-box {
+.home-grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-row: 1fr 1fr 1fr 1fr;
+}
+
+.who-card {
+  grid-row: 1/3;
+  grid-column: 6/11;
   text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 100px;
+}
+
+.what-card {
+  grid-column: 1/6;
+  grid-row: 3/5;
+  text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 100px
+}
+
+.why-card {
+  grid-column: 6/11;
+  grid-row: 3/5;
+  text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 100px
+}
+
+.title {
+  text-align: center;
+  font-size: 2em;
+  grid-column: 1/3;
+}
+
+.title-msg {
+  text-align: center;
+  grid-column: 1/3;
 }
 
 .card-msg {
@@ -119,6 +179,62 @@ input[name='r'] {
   font-size: .8em;
   padding-bottom: 15px;
 }
+
+.card-img {
+  width: 100%;
+}
+
+#service-card {
+  background-color: #707070;
+  text-align: center;
+  height: 100%;
+  grid-column: 1/11;
+  grid-row: 1/2;
+}
+
+.-grid {
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+#provide-card {
+  grid-row: 2/3;
+}
+
+
+#provide-img {
+  width: 50%;
+  grid-column: 1/6;
+}
+
+
+.provide-words {
+  width: 50%;
+  grid-column: 6/11;
+  text-align: center;
+}
+
+
+
+#prices-card {
+  grid-row: 3/4
+}
+
+.prices-img {
+  width: 100%;
+  grid-column: 6/11;
+  grid-row: 4/5;
+}
+
+#prices-words {
+  grid-column: 1/6;
+  text-align: center;
+}
+
+.button-box {
+  text-align: center;
+}
+
 
 .book, .learn-more {
   background-color: #333333;
@@ -134,6 +250,12 @@ input[name='r'] {
 .book:hover, .learn-more:hover {
   background-color: #707070;
   color: white;
+}
+
+.button-box {
+  grid-row: 4/5;
+  grid-column: 5/7;
+  width: 100%;
 }
 
 footer {
