--- a/cuisineart/styles/style.css
+++ b/cuisineart/styles/style.css
@@ -56,15 +56,20 @@ nav a:hover {
 
 #msg h1 {
   font-size: 3em;
+  position: relative;
+  padding-top: 2%;
 }
 
 #msg h3 {
-  font-size: 1.5em;;
+  font-size: 1.5em;
+  position: relative;
+  padding-bottom: 30%;
 }
 
 .slidershow {
   width: 100%;
   overflow: hidden;
+  border-color: #707070;
 }
 
 .middle {
@@ -73,25 +78,24 @@ nav a:hover {
 }
 
 .navigation {
-  position: absolute;
-  bottom: 20px;
-  padding-left: 20%;
+  position: relative;
+  bottom: 10%;
+  padding-left: 30%;
   grid-row: 2/3;
   display: flex;
-  
 }
 
 .bar {
   width: 50px;
   height: 10px;
-  border: 2px solid #fff;
+  border: 2px solid #707070;
   margin: 6px;
   cursor: pointer;
   transition: 0.4s;
 }
 
 .bar:hover {
-  background: #fff;
+  background: #707070;
 }
 
 input[name='r'] {
@@ -101,7 +105,7 @@ input[name='r'] {
 
 .slides {
   width: 500%;
-  height: 100%;
+  height: 80%;
   display: flex;
 }
 
@@ -137,12 +141,29 @@ input[name='r'] {
 }
 
 .who-card {
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10%;
   grid-row: 1/3;
+}
+
+.who-card h2 {
   grid-column: 6/11;
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 100px;
+}
+
+.who-card p {
+  grid-column: 6/11;
+  text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.who-card img{
+  grid-column: 1/6;
+  width: 100%;
 }
 
 .what-card {
@@ -151,7 +172,7 @@ input[name='r'] {
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 100px
+  padding-top: 30%
 }
 
 .why-card {
@@ -160,7 +181,7 @@ input[name='r'] {
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 100px
+  padding-top: 30%
 }
 
 .title {
