--- a/cuisineart/styles/style.css
+++ b/cuisineart/styles/style.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&family=Big+Shoulders+Text:wght@700&family=Lateef&display=swap');
 
 
+#background {
+  margin-top: 6%;
+  height: 400px;
+  background-color: #333333;
+  grid-column: 1/11;
+  grid-row: 4/5;
+  margin-bottom: 150px;
+}
+
 body {
   font-family: 'Big Shoulders Text', 'Garamond', sans-serif;
   font-size: 22px;
@@ -137,33 +146,30 @@ input[name='r'] {
 .home-grid{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-row: 1fr 1fr 1fr 1fr;
 }
 
 .who-card {
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 10%;
   grid-row: 1/3;
-}
-
-.who-card h2 {
   grid-column: 6/11;
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-bottom: 200px;
+  padding-top: 100px;
 }
 
-.who-card p {
-  grid-column: 6/11;
-  text-align: center;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.who-card img{
+.who-img{
   grid-column: 1/6;
-  width: 100%;
+  width: 80%;
+  grid-row: 1/3;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 200px;
+  padding-top: 100px;
 }
 
 .what-card {
@@ -172,7 +178,12 @@ input[name='r'] {
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 30%
+  padding-top: 30%;
+  color: white;
+}
+
+.what-card p {
+  color: white;
 }
 
 .why-card {
@@ -181,7 +192,12 @@ input[name='r'] {
   text-align: center;
   padding-left: 5px;
   padding-right: 5px;
-  padding-top: 30%
+  padding-top: 30%;
+  color: white;
+}
+
+.why-card p {
+  color: white;
 }
 
 .title {
@@ -219,7 +235,6 @@ input[name='r'] {
 .-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 .provide-card {
@@ -235,13 +250,6 @@ input[name='r'] {
 .provide-card h2 {
   grid-column: 7/10;
 }
-
-/* .provide-words {
-  width: 50%;
-  grid-column: 6/11;
-  text-align: center;
-} */
-
 
 
 #prices-card {
