--- a/cuisineart/styles/style.css
+++ b/cuisineart/styles/style.css
@@ -153,7 +153,7 @@ input[name='r'] {
   grid-column: 6/11;
   text-align: center;
   padding-left: 5px;
-  padding-right: 5px;
+  padding-right: 55px;
   margin-top: auto;
   margin-bottom: auto;
   padding-bottom: 200px;
@@ -176,8 +176,8 @@ input[name='r'] {
   grid-column: 1/6;
   grid-row: 3/5;
   text-align: center;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 55px;
+  padding-right: 25px;
   padding-top: 30%;
   color: white;
 }
@@ -190,8 +190,8 @@ input[name='r'] {
   grid-column: 6/11;
   grid-row: 3/5;
   text-align: center;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 25px;
+  padding-right: 55px;
   padding-top: 30%;
   color: white;
 }
@@ -200,15 +200,13 @@ input[name='r'] {
   color: white;
 }
 
-.title {
+.ctitle {
   text-align: center;
   font-size: 2em;
-  grid-column: 1/3;
 }
 
-.title-msg {
+.ctitle-msg {
   text-align: center;
-  grid-column: 1/3;
 }
 
 .card-msg {
@@ -218,10 +216,8 @@ input[name='r'] {
 }
 
 .land{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  margin-top: 15%;
+  margin-bottom: 15%;
 }
 
 #service-card {
@@ -229,44 +225,41 @@ input[name='r'] {
   text-align: center;
   grid-column: 1/11;
   grid-row: 1/2;
-  margin: auto;
+  height: fit-content;
 }
 
-.-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-}
 
-.provide-card {
+.provide-words {
   grid-row: 2/3;
+  grid-column: 6/11;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 
 #provide-img {
   width: 100%;
   grid-column: 1/6;
-}
-
-.provide-card h2 {
-  grid-column: 7/10;
+  grid-row: 2/3;
 }
 
 
-#prices-card {
-  grid-row: 3/4
+#prices-words {
+  grid-row: 3/4;
+  grid-column: 1/6;
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .prices-img {
   width: 100%;
   grid-column: 6/11;
-  grid-row: 4/5;
+  grid-row: 3/4;
 }
-
-#prices-words {
-  grid-column: 1/6;
-  text-align: center;
-}
-
 
 
 .book, .learn-more {
@@ -289,10 +282,21 @@ input[name='r'] {
   grid-column: 5/7;
   grid-row: 6/7;
   width: 100%;
-  margin-top: 60px;
-  text-align: center
+  text-align: center;
+  padding-top: 70%;
+  line-height: 1.5em;
 }
 
+.title-msg {
+  text-align: center;
+  grid-column: 1/3;
+}
+
+.title {
+  text-align: center;
+  font-size: 2em;
+  grid-column: 1/3;
+}
 
 #meal-card {
   grid-column: 3/5;
@@ -367,4 +371,15 @@ footer a:hover {
 
 footer .social img {
   padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+  .button-box {
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+  }
+  footer {
+      margin-top: 25px;
+  }
 }
