--- a/cuisineart/styles/style.css
+++ b/cuisineart/styles/style.css
@@ -306,25 +306,21 @@ input[name='r'] {
 }
 
 #meal-card {
-  grid-column: 3/5;
+  grid-column: 2/4;
   grid-row: 2/3;
-  justify-self: center;
-  align-self: center;
-  padding-right: 35%;
 }
 
 #ppl-card {
   grid-column: 7/9;
   grid-row: 2/3;
-  justify-self: center;
-  align-self: center;
-  padding-left: 35%;
 }
 
 .card-img{
   border: 10px solid #707070;
   transition: transform .5s;
   box-shadow: 5px 5px 10px #333333;
+  width: 140%;
+  margin: auto;
 }
 
 .card-img:hover {
@@ -333,14 +329,14 @@ input[name='r'] {
 }
 
 #ppl-card, #meal-card {
-  margin: 200px 0; 
+  margin: 100px 0; 
 }
 
 .what-meals {
   text-align: center;
   grid-row: 3/4;
   grid-column: 2/10;
-  margin: 50px;
+  margin: 130px;
 }
 
 .recs {
